--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="/resume/assets/images/my_image.jpg" style="width:100%" alt="My Photo">
-          <div class="w3-display-bottomleft w3-container w3-text-teal">
-            <h2>Giovanni Huka</h2>
+          <div class="w3-display-topleft w3-container w3-round w3-display-hover w3-teal">
+            <h5>Giovanni H. Huka SKom.</h5>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Designer</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>IT Specialist</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Bukit Golf Riverside, Arcadia Raya AR 68</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Bojong Nangka, Gn. Putri, Kab. Bogor</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>giovanni.huka@gmail.com</p>
