--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Resume of Giovanni Huka</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -20,70 +20,75 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Left Column -->
     <div class="w3-third">
     
-      <div class="w3-white w3-text-grey w3-card-4">
+      <div class="w3-white w3-text-grey w3-card-4 w3-round-large">
         <div class="w3-display-container">
           <img src="/resume/assets/images/my_image.jpg" style="width:100%" alt="My Photo">
-          <div class="w3-display-topleft w3-container w3-round w3-display-hover w3-teal">
-            <h5>Giovanni H. Huka SKom.</h5>
-          </div>
+          <!-- <div class="w3-display-topleft w3-container w3-round w3-display-hover w3-dark-grey"> -->
+          <!-- <div class="w3-section w3-dark-grey">   -->
+            <!-- <h2>Giovanni H. Huka SKom.</h2> -->
+          <!-- </div> -->
+          <!-- </div> -->
         </div>
+        <div class="w3-panel w3-dark-grey" style="margin-top: 0px;">  
+            <h2>Giovanni H. Huka SKom.</h2>
+          </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>IT Specialist</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Bukit Golf Riverside, Arcadia Raya AR 68</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>IT Specialist</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>Bukit Golf Riverside, Arcadia Raya AR 68</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Bojong Nangka, Gn. Putri, Kab. Bogor</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>giovanni.huka@gmail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+62(813)83055283</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>giovanni.huka@gmail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>+62(813)83055283</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-dark-grey"></i>Skills</b></p>
           <p>Excel VBA Programming</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:90%">90%</div>
           </div>
           <p>SQL Programming</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:85%">85%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:85%">85%</div>
           </div>
           <p>Leadership</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:80%">80%</div>
           </div>
           <p>Project Management</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:70%">70%</div>
           </div>
           <p>Adobe Photoshop</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:90%">90%</div>
           </div>
           <p>Photography</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
           <p>Illustrator</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:75%">75%</div>
           </div>
           <p>Media</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:50%">50%</div>
           </div>
           <br>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-dark-grey"></i>Languages</b></p>
           <p>Indonesia</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+            <div class="w3-round-xlarge w3-dark-grey" style="height:24px;width:100%"></div>
           </div>
           <p>English</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%"></div>
+            <div class="w3-round-xlarge w3-dark-grey" style="height:24px;width:90%"></div>
           </div>
 <!--           <p>German</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
+            <div class="w3-round-xlarge w3-dark-grey" style="height:24px;width:25%"></div>
           </div> -->
           <br>
         </div>
@@ -95,87 +100,93 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Right Column -->
     <div class="w3-twothird">
 
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
+      <div class="w3-container w3-card w3-white w3-margin-bottom w3-round-large">
+        <div class="w3-section w3-light-grey">
+          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>About Me</h2>
+        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>IT specialist with diverse industry experience like consumer goods, IT consultant and retail business. Professional expertise includes system application engineer, database administrator, data analysis, VBA programming and python for ArcGIS system programming</b></h5>
         </div>
       </div>
     
-      <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+      <div class="w3-container w3-card w3-white w3-round-large">
+        <div class="w3-section w3-light-grey">
+          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Work Experience</h2>
+        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Technical Senior Consultant | PT. NTT Data Indonesia</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2012 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2012 - <span class="w3-tag w3-dark-grey w3-round">Current</span></h6>
           <p>Multiple project assignment with different subject from GIS data mapping developer, internal HRA Business Analyst, online retail POS named LAKUPOS system project manager and HR Zero online HRA Payroll & Tax online system Technical Senior Consultant</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Product Specialist | Genitech Incorporated</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2012 – Nov 2012</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2012 – Nov 2012</h6>
           <p>Technical and product specialist for Retail Management System named Retail Pro in Indonesia representative office for Philippine’s Retail Management System Implementer company</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Database Administrator | PT. Trikomsel Multimedia</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006 – 2008</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006 – 2008</h6>
           <p>Oracle database administrator for internal Modern Channel sales and distribution system. Involved in database design, database programming, setup multiple servers and create Linux shell script automation for first level support team on database</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Technical Consultant | PT. Waysase Citapadu</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004 – 2006</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004 – 2006</h6>
           <p>Involved in project in Bank PMO (Bank Danamon) as Technical System Consultant, implementation SAP Business One ERP for SMB as Technical Product Specialist</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Sales Application Support | PT. Frisian Flag Indonesia</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2003 - 2004</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2003 - 2004</h6>
           <p>Team leader on Closed Distribution Information System (CDIS) implementation to all Retail Channel PT FFI’s distributors nation wide </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>IT Support Engineer | PT. Astra Graphia IT Solution</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2001 - 2003</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2001 - 2003</h6>
           <p>Assigned to several outsourcing projects with diverse industry such as Network Operation Center Bank Danamon, upgrade OS on user PC at one of large gas company in Indonesia and Internet Banking Bank Universal as Data Center Engineer</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>IT Engineer | PT. Radio Prambors</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2000 - 2001</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2000 - 2001</h6>
           <p>Supporting broadcast radio system and software in internal and external radio network of PT. Radio Prambors</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>IT Staff | PT. Radio Trijaya Sakti</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2000</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2000</h6>
           <p>Supporting internal user in the company and supporting Broadcast System Automation</p><br>
         </div>
-      </div>
+      </div><br>
 
-      <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+      <div class="w3-container w3-card w3-white w3-round-large">
+        <div class="w3-section w3-light-grey">
+          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Education</h2>
+        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Gunadarma University</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1994 - 1999</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1994 - 1999</h6>
           <p>Bachelor’s Degree in Engineering (Computer/Telecommunication)</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SMA Negeri 3 Jakarta</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1991 - 1994</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1991 - 1994</h6>
           <p>High school graduate</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SMP Negeri 1 Jakarta</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1988 - 1991</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1988 - 1991</h6>
           <p>Middle school graduate</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SD Negeri Menteng 01 Jakarta</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1982 - 1988</h6>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1982 - 1988</h6>
           <p>Elementery school graduate</p><br>
         </div>
       </div>
@@ -189,7 +200,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-teal w3-center w3-margin-top">
+<footer class="w3-container w3-dark-grey w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
