--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>About Me</h2>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>IT specialist with diverse industry experience like consumer goods, IT consultant and retail business. Professional expertise includes system application engineer, database administrator, data analysis, VBA programming and python for ArcGIS system programming</b></h5>
+          <h5 class="w3-opacity"><b>IT specialist with diverse industry experience like consumer goods, IT consultant and retail business. Professional expertise includes system application engineer, database administrator, data analysis, VBA programming and python for ArcGIS system programming</b>
+          </h5>
+          <br>
         </div>
       </div>
     
