--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Technical Senior Consultant | PT. NTT Data Indonesia</b></h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2012 - <span class="w3-tag w3-dark-grey w3-round">Current</span></h6>
           <p>Multiple project assignment with different subject from GIS data mapping developer, internal HRA Business Analyst, online retail POS named LAKUPOS system project manager and HR Zero online HRA Payroll & Tax online system Technical Senior Consultant</p>
-          <button onclick="myFunction('Demo1')" class="w3-button">Read more ...</button>
+          <button onclick="myFunction('Demo1')" class="w3-button">Details...</button>
           <div id="Demo1" class="w3-container w3-hide">
             <h6>Senior Technical Consultant</h6>
             <ul>
