--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
-  <p>Created by Giovanni H. Huka</p>
+  <p>Giovanni H. Huka &copy; 2020</p>
+  <p>All rights reserved.</p>
 </footer>
 
 <script>
