--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>Bukit Golf Riverside, Arcadia Raya AR 68</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Bojong Nangka, Gn. Putri, Kab. Bogor</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>giovanni.huka@gmail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>+62(813)83055283</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>+62-811-9960728</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-dark-grey"></i>Skills</b></p>
