--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6>Senior Technical Consultant</h6>
             <ul>
               <li>Managing Project Retail of FMCG and F&B system development and implementation</li>
-              <li>Managing Project Retail of FMCG and F&B system development and implementation</li>
-              <li>Managing Project Retail of FMCG and F&B system development and implementation</li>
+<!--               <li>Managing Project Retail of FMCG and F&B system development and implementation</li>
+              <li>Managing Project Retail of FMCG and F&B system development and implementation</li> -->
             </ul>
             <h6>Solution Specialist</h6>
             <ul>
