--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=shadow-multiple|3d-float">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato&effect=shadow-multiple|3d-float">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple|3d-float">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 .w3-lobster {
   font-family: "Lobster", serif;
+}
+.w3-lato {
+  font-family: "Lato", italic;
 }
 .w3-rancho{
   font-family: "Rancho", serif;
