--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div id="Demo1" class="w3-container w3-hide">
             <h6>Senior Technical Consultant</h6>
             <ul>
-              <li>Managing Project Retail of FMCG and F&B system development and implementation</li>
+              <li>Managing Team member for HRIS, Payroll & Tax web system named HRZERO implementation and customer success factor</li>
 <!--               <li>Managing Project Retail of FMCG and F&B system development and implementation</li>
               <li>Managing Project Retail of FMCG and F&B system development and implementation</li> -->
             </ul>
@@ -155,6 +155,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Product Specialist | Genitech Incorporated</b></h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2012 – Nov 2012</h6>
           <p>Technical and product specialist for Retail Management System named Retail Pro in Indonesia representative office for Philippine’s Retail Management System Implementer company</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Technical Engineer | PT. Time International</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 – 2012</h6>
+          <p>Managing ERP system (MS Dynamics GP) for frontend POS and backend system (stock management and financial)</p>
           <hr>
         </div>
         <div class="w3-container">
